<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where\'s My Stuff?</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello worldc!</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpPage">Sign Up</string>
    <string name="title_activity_register_error">RegisterError</string>
    <string name="welcome">Wlecome to Wheres My stuff!</string>
    <string name="add_lost_item">Enter Lost Item</string>

    <string-array name="categories">
        <item>Miscellaneous</item>
        <item>Heirlooms</item>
        <item>Keepsakes</item>
    </string-array>

    <string name="category_prompt">Choose a Category</string>

    <string-array name="cities">
        <item/>
    </string-array>

    <string name="title_activity_all_lost_items">AllLostItems</string>
    <string name="title_activity_admin_screen">AdminScreenActivity</string>
    <string name="title_activity_all_found_items_list">AllFoundItemsListActivity</string>
    <string name="title_activity_test_a">Test_a</string>

    <string-array name="filter">
        <item>Category</item>
        <item>Date</item>
        <item>Location</item>
    </string-array>

    <string name="title_activity_filtered_items_list">FilteredItemsListActivity</string>

    <string-array name="searchApp">
        <item>Category</item>
        <item>Item Name</item>
        <item >Match Item</item>
    </string-array>

    <string name="title_activity_searched_for_items">SearchedForItems</string>

</resources>